fix image in markdown overflow

--- a/src/components/Sections/SectionMarkdown.less
+++ b/src/components/Sections/SectionMarkdown.less
@@ -8,6 +8,10 @@
     display: inline-block !important;
   }
 
+  img {
+    max-width: 100%;
+  }
+
   .markdown {
     &.blockquote {
       padding: 0 15px;
